// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Segments inside Header 1`] = `
<view
  name="container"
  style={Object {}}
>
  <view
    name="header"
  >
    <view
      name="statusBar"
    />
    <view
      name="header-other"
      style={Object {}}
    >
      <view
        name="left"
        style={Object {}}
      >
        <view
          name="View"
          style={
            Object {
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
            }
          }
        >
          <view
            name="View"
            style={Object {}}
          >
            <text
              style={Object {}}
            >
              ios-arrow-back
            </text>
          </view>
        </view>
      </view>
      <view
        name="body"
        style={Object {}}
      >
        <view
          name="View"
          style={Object {}}
        >
          <view
            name="View"
            style={
              Object {
                "borderBottomLeftRadius": 2,
                "borderBottomRightRadius": 2,
                "borderTopLeftRadius": 2,
                "borderTopRightRadius": 2,
              }
            }
          >
            <view
              name="View"
              style={Object {}}
            >
              <text
                style={Object {}}
              >
                Puppies
              </text>
            </view>
          </view>
          <view
            name="View"
            style={
              Object {
                "borderBottomLeftRadius": 2,
                "borderBottomRightRadius": 2,
                "borderTopLeftRadius": 2,
                "borderTopRightRadius": 2,
              }
            }
          >
            <view
              name="View"
              style={Object {}}
            >
              <text
                style={Object {}}
              >
                Cubs
              </text>
            </view>
          </view>
        </view>
      </view>
      <view
        name="right"
        style={Object {}}
      >
        <view
          name="View"
          style={
            Object {
              "borderBottomLeftRadius": 2,
              "borderBottomRightRadius": 2,
              "borderTopLeftRadius": 2,
              "borderTopRightRadius": 2,
            }
          }
        >
          <view
            name="View"
            style={Object {}}
          >
            <text
              style={Object {}}
            >
              ios-search
            </text>
          </view>
        </view>
      </view>
    </view>
  </view>
</view>
`;

exports[`renders Segments outside Header 1`] = `
<view
  name="container"
  style={Object {}}
>
  <view
    name="header"
  >
    <view
      name="statusBar"
    />
    <view
      name="header-other"
      style={Object {}}
    />
  </view>
  <view
    name="View"
    style={Object {}}
  >
    <view
      name="View"
      style={
        Object {
          "borderBottomLeftRadius": 2,
          "borderBottomRightRadius": 2,
          "borderTopLeftRadius": 2,
          "borderTopRightRadius": 2,
        }
      }
    >
      <view
        name="View"
        style={Object {}}
      >
        <text
          style={Object {}}
        >
          Puppies
        </text>
      </view>
    </view>
    <view
      name="View"
      style={
        Object {
          "borderBottomLeftRadius": 2,
          "borderBottomRightRadius": 2,
          "borderTopLeftRadius": 2,
          "borderTopRightRadius": 2,
        }
      }
    >
      <view
        name="View"
        style={Object {}}
      >
        <text
          style={Object {}}
        >
          Kittens
        </text>
      </view>
    </view>
    <view
      name="View"
      style={
        Object {
          "borderBottomLeftRadius": 2,
          "borderBottomRightRadius": 2,
          "borderTopLeftRadius": 2,
          "borderTopRightRadius": 2,
        }
      }
    >
      <view
        name="View"
        style={Object {}}
      >
        <text
          style={Object {}}
        >
          Cubs
        </text>
      </view>
    </view>
  </view>
</view>
`;
